--- a/index.html
+++ b/index.html
@@ -2,8 +2,41 @@
 <html>
 <head>
     <title></title>
+
+    <meta charset="UTF-8">
+
+
+    <!--<link rel="stylesheet/less" type="text/css" href="less/normalize.less/normalize.less">-->
+
+    <!--<link rel="stylesheet/less" type="text/css" href="less/tenpix_const_v0.1.less">-->
+    <!--<link rel="stylesheet/less" type="text/css" href="less/tenpix_margins_v0.1.less">-->
+    <link rel="stylesheet/less" type="text/css" href="less/tenpix_base_v0.1.less">
+
+    <link rel="stylesheet/less" type="text/css" href="less/project.less">
+
+    <script src="js/less.js/dist/less.min.js"></script>
+
 </head>
 <body>
+    <div class="container">
+        <section class="header">
+            <div class="container">
+                <h1>Заголовок</h1>
 
+            </div>
+        </section>
+        <section class="image">
+            <div class="container">
+
+            </div>
+        </section>
+        <section class="text">
+            <div class="container">
+                <p>
+                    To use it, you have to install Zen Coding plugin for Web IDE/IntelliJ IDEA: go to Zen Coding Project Download Page, download an archive that contains a set of live templates, and extract it to  folder (“~/Library/Preferences/WebIde10/templates” for Mac OS X).
+                </p>
+            </div>
+        </section>
+    </div>
 </body>
 </html>
