Commit 4: typography & grid clearence
[+] Added cool typography calculation
— You can add your own type sizes array
— Automaticaly changing baseline swift
— You can change grid module

[*] Changed grid rendering

--- a/index.html
+++ b/index.html
@@ -44,6 +44,25 @@
                 </p>
             </div>
         </section>
+        <section class="headings">
+            <div class="container">
+                <span class="heading-1">Размер шрифта 7</span>
+                <span class="heading-2">Размер шрифта 9</span>
+                <span class="heading-3">Размер шрифта 11</span>
+                <span class="heading-4">Размер шрифта 13</span>
+                <span class="heading-5">Размер шрифта 15</span>
+                <span class="heading-6">Размер шрифта 18</span>
+                <span class="heading-7">Размер шрифта 21</span>
+                <span class="heading-8">Размер шрифта 24</span>
+                <span class="heading-9">Размер шрифта 27</span>
+                <span class="heading-10">Размер шрифта 30</span>
+                <span class="heading-11">Размер шрифта 33</span>
+                <span class="heading-12">Размер шрифта 36</span>
+                <span class="heading-13">Размер шрифта 39</span>
+                <span class="heading-14">Размер шрифта 51</span>
+
+            </div>
+        </section>
     </div>
 </body>
 </html>
