Chang filenames & readme

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 
     <link rel="stylesheet/less" type="text/css" href="less/normalize.less/normalize.less">
 
-    <!--<link rel="stylesheet/less" type="text/css" href="less/tenpix_const_v0.1.less">-->
-    <!--<link rel="stylesheet/less" type="text/css" href="less/tenpix_margins_v0.2.less">-->
-    <!--<link rel="stylesheet/less" type="text/css" href="less/tenpix_base_v0.2.less">-->
+    <!--<link rel="stylesheet/less" type="text/css" href="less/tenpix_const.less">-->
+    <!--<link rel="stylesheet/less" type="text/css" href="less/tenpix_margins.less">-->
+    <!--<link rel="stylesheet/less" type="text/css" href="less/tenpix_base.less">-->
 
     <link rel="stylesheet/less" type="text/css" href="less/project.less">
 
